--- a/roombuds/styles/Home.module.css
+++ b/roombuds/styles/Home.module.css
@@ -27,9 +27,10 @@
   font-size: 2em;
   text-align: left;
   font-weight: lighter;
+  padding-right: 20px;
 }
 
-.column-container {
+.column_container {
   display: flex;
   flex-wrap: wrap;
 }
@@ -41,4 +42,10 @@
 
 .column:after {
   flex: auto;
+}
+
+.picture {
+  width: auto;
+  height: 30em;
+  text-align: center;
 }
